# failsafe

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  RuleSchema.json
Failsafe/: CMakeLists.txt  ExampleRuleFile.json  main.cpp
Failsafe/Modules/DC/: DCEvent.hpp  DCModule.cpp  DCModule.hpp  USBDevice.hpp
Failsafe/Modules/DC/Operations/: DCOperation.hpp
Failsafe/Modules/DLP/: DLPModule.cpp  DLPModule.hpp
Failsafe/Modules/DLP/FSMessages/: FSMessage.cpp  FSMessage.hpp  FSMessageFactory.cpp  FSMessageFactory.hpp  OpenFSMessage.cpp  OpenFSMessage.hpp  RenameFSMessage.cpp  RenameFSMessage.hpp  UnlinkFSMessage.cpp  UnlinkFSMessage.hpp
Failsafe/Modules/DLP/Handlers/: ChromeHandler.cpp  ChromeHandler.hpp  GenericHandler.cpp  GenericHandler.hpp  HandlerBase.cpp  HandlerBase.hpp  NautilusHandler.cpp  NautilusHandler.hpp  SlackHandler.cpp  SlackHandler.hpp
Failsafe/Modules/DLP/Operations/: DLPOperation.hpp  DLPOperationOnePath.hpp  DLPOperationTwoPath.hpp
Failsafe/Modules/DLP/PathResolver/: CloudCache.cpp  CloudCache.hpp  MountPointCache.cpp  MountPointCache.hpp  PathResolver.cpp  PathResolver.hpp  PathType.cpp  PathType.hpp  ResolvedPath.hpp
Failsafe/SharedComponents/IncidentLogger/: ILogger.hpp  LocalDBLogger.cpp  LocalDBLogger.hpp
Failsafe/SharedComponents/RuleProvider/: ActionType.cpp  ActionType.hpp  RuleBase.cpp  RuleBase.hpp  RuleProvider.cpp  RuleProvider.hpp
Failsafe/SharedComponents/RuleProvider/DC/: DCOperationType.cpp  DCOperationType.hpp  DCRule.cpp  DCRule.hpp
Failsafe/SharedComponents/RuleProvider/DLP/: DLPOperationType.cpp  DLPOperationType.hpp  DLPRule.cpp  DLPRule.hpp
Failsafe/SharedComponents/RuleProvider/DLP/Conditions/: CommonDLPConditions.cpp  CommonDLPConditions.hpp  IDLPConditions.hpp  TransferDLPConditions.cpp  TransferDLPConditions.hpp
Failsafe/SharedComponents/RuleProvider/Tests/: TestActionType.cpp  TestDCRules.cpp  TestDLPOperationType.cpp  TestDLPRules.cpp  TestPathType.cpp  TestRuleProvider.cpp
Failsafe/Utils/: AtExit.hpp  TestThreadPool.cpp  ThreadPool.hpp
Libraries/FSHook/: CMakeLists.txt
Libraries/FSHook/Common/: EventType.h  NetlinkFamily.h
Libraries/FSHook/FSHook/: FSHook.c  FSHook.h  KModuleHandler.c  KModuleHandler.h  NetlinkParser.c  NetlinkParser.h
Libraries/FSHook/FSHook/Messages/: Message.h
Libraries/FSHook/FSHook/Tests/: TestFSHook.cpp  TestNetlinkParser.cpp
Libraries/FSHook/KernFSHook/: CMakeLists.txt  Kbuild.in  main.c
Libraries/FSHook/KernFSHook/Hooking/: FTraceHooking.c  FTraceHooking.h  Hooks.c  Hooks.h  ProcessInfo.c  ProcessInfo.h  ResponseWaitMap.c  ResponseWaitMap.h  Variables.c  Variables.h
Libraries/FSHook/KernFSHook/Hooking/Hooks/: Utils.c  Utils.h  openat.c  openat.h  renameat.c  renameat.h  unlinkat.c  unlinkat.h
Libraries/FSHook/KernFSHook/Netlink/: Connection.c  Connection.h  MessageFactory.c  MessageFactory.h  NLMsg.h
Libraries/USBControl/: CMakeLists.txt
Libraries/USBControl/USBControl/: UCDeviceEnumerate.c  UCDeviceEnumerate.h  UCDeviceMonitor.c  UCDeviceMonitor.h  USBControl.h
Libraries/USBControl/USBControl/Events/: UCDeviceEvent.c  UCDeviceEvent.h  UCDeviceInfo.c  UCDeviceInfo.h
Libraries/USBControl/USBControl/Tests/: TestDeviceEnumerate.cpp  TestDeviceMonitor.cpp
TestData/Delete/: block.json  ignore.json  log.json
TestData/FileTransfer/: block.json  ignore.json  log.json
TestData/InstantMessaging/: block.json  ignore.json  log.json
TestData/USBDevices/: blockAdd.json  ignoreAdd.json  ignoreRemove.json  logAdd.json  logRemove.json
TestData/Upload/: block.json  ignore.json  log.json
Tests/: testPerf.sh
Tests/TestBinary/: CMakeLists.txt  main.cpp
